# BT_work

./: README.md
25RJ-CprAgent/: Cargo.toml  config.toml  devenv.nix  devenv.yaml
25RJ-CprAgent/src/: airflow_processor.rs  config.rs  distance_processor.rs  first_press.rs  location_processor.rs  main.rs  pressure_processor.rs  record.rs  websocket_server.rs
CPRpro_test/: platformio.ini
CPRpro_test/src/: BluetoothManager.cpp  BluetoothManager.h  MCP3008.cpp  SensorFilter.cpp  SensorFilter.h  SocketManager.cpp  SocketManager.h  WiFiManager.cpp  WiFiManager.h  config.h  main.cpp
CPRpro_testV1.1/: platformio.ini
CPRpro_testV1.1/src/: BluetoothManager.cpp  MCP3008.cpp  MCP3008.h  SensorFilter.cpp  WiFiManager.cpp  WiFiManager.h  config.h  main.cpp
CPRpro_testV1.2/: platformio.ini
CPRpro_testV1.2/src/: BluetoothManager.cpp  MCP3008.cpp  SensorFilter.cpp  SensorFilter.h  SocketManager.h  config.h  main.cpp
CPRpro_testV1.3/src/: SensorFilter.cpp  config.h  main.cpp
CPRpro_testV1.4/src/: BluetoothManager.cpp  MCP3008.cpp  SensorFilter.h
CPRpro_testV1.5/src/: MCP3008.cpp  SensorFilter.cpp  SensorFilter.h  config.h  main.cpp
CPRpro_testV1.6/src/: SensorFilter.cpp  config.h
CPRpro_testV1.7/: platformio.ini
CPRpro_testV1.7/src/: BluetoothManager.cpp  MCP3008.cpp  SensorFilter.cpp  WiFiManager.cpp  WiFiManager.h  config.h  main.cpp
CPRpro_testV1.8/: platformio.ini
CPRpro_testV1.8/src/: BluetoothManager.cpp  BluetoothManager.h  MCP3008.cpp  SensorFilter.h  SocketManager.cpp  SocketManager.h  WiFiManager.cpp  WiFiManager.h  config.h  main.cpp
(+3 files in other folders)
