[package]
name = "cpr_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
chrono = "0.4.41"
tiny_http = "0.12.0"
toml = "0.9.2"
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.22", features = ["blocking"] }
url = "2.5.7"
